Fix issue of wrapping last letter of word in first column

--- a/src/SFA.DAS.FindEmploymentSchemes.Web/wwwroot/css/site.css
+++ b/src/SFA.DAS.FindEmploymentSchemes.Web/wwwroot/css/site.css
@@ -238,3 +238,9 @@ body.js-enabled .app-show-on-mobile-no-js {
         border-left: 4px solid #1d70b8;
     }
 }
+
+@media (max-width: 40.0600em) {
+    td.comparison-results-scheme div {
+        min-width: 90px;
+    }
+}
